feat: agregar endpoint de categoria y optimizar unificador para reducir la categoria otros
